submit24:00 14th Nov

--- a/index.html
+++ b/index.html
@@ -104,14 +104,14 @@
         <div class="chishiki">
             <div class="chishiki2">
                 <div class="chishiki3"> 
-                    <div><p class="sixpadtext1">本格的な農園を使った実地研修</p>
+                    <div><p class="sixpadtext1">必要な知識もしっかりと取得</p>
                         <div class="space40"></div>
-                        <div class="chishikitext">
-                            <p>チーズアカデミーでは、本格的な農園を使った実地研修を</p>
-                            <p>行うことができます。プロとして活躍するチーズ職人も</p>
-                            <p>使用するような、広大で環境も整った農園を余すところ</p>
-                            <p>なく使い、卒業時には本格的なチーズを自分の力で作れる</p>
-                            <p>実践力の養成を目指します。</p>
+                        <div class="honkakutext">
+                            <p>チーズ作りには、しっかりとした食に関する知識が</p>
+                            <p>欠かせません。チーズアカデミーでは、一流講師陣による、</p>
+                            <p>チーズ作りに必要ないろはを余すところなく学べます。</p>
+                            <p>チーズそのものでなく、栄養学全般を学ぶことも</p>
+                            <p>可能ですので、チーズ以外への展開も夢ではないでしょう。</p>
                         </div>
                     </div>
                 </div>
